--- a/index.html
+++ b/index.html
@@ -26,18 +26,32 @@ class: topic-template
 layout: false
 class: center, middle
 
-# Project goal
+# Project goals
 
 ---
 
 layout: true
 class: topic-template
 
-# Configuration Service > Project goal
+# Configuration Service > Project goals
 
 ---
 
-> Create an API accessible Service that provides that ability to retrieve and store configuration data.
+class: goal
+
+Create an API accessible Service that provides the ability to retrieve and store configuration data.
+
+---
+
+class: goal
+
+Rip out configuration data from Chef (where appropriate) and allow approved persons to make changes.
+
+---
+
+class: goal
+
+Allow engineering teams to maintain their configuration data via the Ruby library or command line tool.
 
 ---
 
@@ -54,8 +68,6 @@ class: topic-template
 # Configuration Service > Project requirements 1/2
 
 ---
-
-[zendesk.atlassian.net/wiki/display/ops/Configuration+Service](https://zendesk.atlassian.net/wiki/display/ops/Configuration+Service)
 
 * Service is API accessible
 * A Ruby library to interface with the API
